--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,6 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "default" : "Data Source = localhost; Initial Catalog=skinet; Integrated security=true"
-  }
+    "default": "Data Source = localhost; Initial Catalog=skinet; Integrated security=true"
+  },
+  "ApiUrl": "https://localhost:5001/"
 }
