client setup and navbar

--- a/client/angular.json
+++ b/client/angular.json
@@ -31,6 +31,8 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "./node_modules/font-awesome/css/font-awesome.min.css",
               "src/styles.scss"
             ],
             "scripts": []
@@ -73,7 +75,7 @@
           "options": {
             "sslKey": "ssl/server.key",
             "sslCert": "ssl/server.crt",
-            "ssl": true
+            "ssl": false
           },
           "configurations": {
             "production": {
