--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,8 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
-    "bootstrap": "^5.1.3",
+    "@fortawesome/fontawesome-free": "^6.1.1",
+    "bootstrap": "^4.2.1",
     "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^8.0.0",
     "rxjs": "~7.5.0",
