angular fix ssl

--- a/client/angular.json
+++ b/client/angular.json
@@ -75,7 +75,7 @@
           "options": {
             "sslKey": "ssl/server.key",
             "sslCert": "ssl/server.crt",
-            "ssl": false
+            "ssl": true
           },
           "configurations": {
             "production": {
