--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,7 +7,8 @@
     }
   },
   "ConnectionStrings": {
-    "default": "Data Source = localhost; Initial Catalog=skinet; Integrated security=true"
+    "default": "Data Source = localhost; Initial Catalog=skinet; Integrated security=true",
+    "Redis" :  "localhost"
   },
   "ApiUrl": "https://localhost:5001/"
 }
