--- a/Infrastructure/Infrastructure.csproj
+++ b/Infrastructure/Infrastructure.csproj
@@ -10,6 +10,7 @@
     <ProjectReference Include="..\Core\Core.csproj" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.15" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore.sqlServer" Version="5.0.15" />
+	  <PackageReference Include="StackExchange.Redis" Version="2.5.61" />
   </ItemGroup>
 
   <ItemGroup>
