--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -8,7 +8,8 @@
   },
   "ConnectionStrings": {
     "default": "Data Source = localhost; Initial Catalog=skinet; Integrated security=true",
-    "Redis" :  "localhost"
+    "Redis": "localhost",
+    "identity": "Data Source = localhost; Initial Catalog=skinetIdentity; Integrated Security = true"
   },
   "ApiUrl": "https://localhost:5001/"
 }
