--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -2,7 +2,7 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft": "Warning",
+      "Microsoft": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
@@ -11,5 +11,10 @@
     "Redis": "localhost",
     "identity": "Data Source = localhost; Initial Catalog=skinetIdentity; Integrated Security = true"
   },
+  "Token": {
+    "key": "super secret key",
+    "issuer": "https://localhost:5001"
+  },
+
   "ApiUrl": "https://localhost:5001/"
 }
